--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,22 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <a class="navbar-brand" href="#">Stack OverFlow</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
+      <li ><a href="#">Home</a></li>
       <li>
         <%= link_to  question_new_path do%>
           Ask Question
         <% end %>
       </li>
 
+      <li>
+        <%= link_to  questions_index_path do%>
+          All Questions
+        <% end %>
+      </li>
 
-      <li><a href="#">Page 2</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
 
