--- a/app/views/questions/content.html.erb
+++ b/app/views/questions/content.html.erb
@@ -5,47 +5,16 @@
     <p> <%= @question["description"] %> </p>
   </div>
   <div class="buttonTabs">
-    <%= button_to "Comment", question_comment_button_path(@question["id"]), method: :get, remote:true, id: 'commentButton' %>
-    <%= button_to "Answers", question_answer_button_path(@question["id"]), method: :get, remote:true, id: 'answerButton' %>
+    <%= link_to "Comment", question_comment_button_path(@question["id"]),class: "fa fa-tag fa-lg black",
+                method: :get, remote:true, id: 'commentButton' %>
+    <%= link_to "Answers", question_answer_button_path(@question["id"]),class: "fa fa-comment fa-lg black",
+                method: :get, remote:true, id: 'answerButton' %>
+    <span id ="like_dislike_space"> <%= render 'layouts/votes' %> </span>
 
-<!--    <button class="buttonTab", id="commentButton">Comment</button>-->
-<!--    <button class="buttonTab" id="answerButton" >Answers</button>-->
   </div>
 
   <p  id="answer_comment_space"></p>
-  <%#= render partial: 'layouts/answers', locals: {question: @question} %>
 
-
-
-  <%#= render partial: 'layouts/comments', locals: {question: @question} %>
-
-
-  <%#= form_with url: vote_create_path( "Question",@question["id"], vote_sign_up ) do |f| %>
-
-    <%#= f.submit "Submit" , class: 'btn-primary' %>
-
-  <%# end %>
-
-  <%#= form_with url: vote_create_path( "Question",@question["id"], vote_sign_down ) do |f| %>
-
-    <%#= f.submit "Submit" , class: 'btn-primary' %>
-
-  <%# end %>
-
-  <%#= form_with url: vote_update_path( 2, vote_sign_down) do |f| %>
-
-    <%#= f.submit "Submit" , class: 'btn-primary' %>
-
-  <%# end %>
-
-<!--  <div class="">-->
-<!--    <a href="" class="fa fa-tag fa-lg black" ></a>-->
-<!--    <a href="" class= "fa fa-comment fa-lg black" ></a>-->
-<!--    <a href="" class="fa fa-thumbs-o-up fa-lg black" ></a>-->
-<!--    <a href="" class="fa fa-thumbs-o-down fa-lg black" ></a>-->
-<!--  </div>-->
-
-</div>
 </div>
 
 <%= javascript_include_tag('pageSpecific/questions/index_question') %>
